tests/snapshots/insta_test__implicit_cast.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        pos: Position {
            n_char: 4,
            n_line: 1,
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        pos: Position {
            n_char: 8,
            n_line: 1,
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        pos: Position {
            n_char: 12,
            n_line: 1,
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        pos: Position {
            n_char: 13,
            n_line: 1,
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        pos: Position {
            n_char: 15,
            n_line: 1,
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        pos: Position {
            n_char: 8,
            n_line: 2,
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        pos: Position {
            n_char: 12,
            n_line: 2,
        },
    },
    Token {
        kind: Eq,
        pos: Position {
            n_char: 14,
            n_line: 2,
        },
    },
    Token {
        kind: Num(
            2,
        ),
        pos: Position {
            n_char: 16,
            n_line: 2,
        },
    },
    Token {
        kind: Semi,
        pos: Position {
            n_char: 17,
            n_line: 2,
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        pos: Position {
            n_char: 8,
            n_line: 3,
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        pos: Position {
            n_char: 13,
            n_line: 3,
        },
    },
    Token {
        kind: Eq,
        pos: Position {
            n_char: 15,
            n_line: 3,
        },
    },
    Token {
        kind: Ident(
            "a",
        ),
        pos: Position {
            n_char: 17,
            n_line: 3,
        },
    },
    Token {
        kind: Semi,
        pos: Position {
            n_char: 18,
            n_line: 3,
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        pos: Position {
            n_char: 8,
            n_line: 4,
        },
    },
    Token {
        kind: Eq,
        pos: Position {
            n_char: 10,
            n_line: 4,
        },
    },
    Token {
        kind: Num(
            4,
        ),
        pos: Position {
            n_char: 12,
            n_line: 4,
        },
    },
    Token {
        kind: Semi,
        pos: Position {
            n_char: 13,
            n_line: 4,
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        pos: Position {
            n_char: 4,
            n_line: 5,
        },
    },
    Token {
        kind: Eof,
        pos: Position {
            n_char: 4,
            n_line: 6,
        },
    },
]
