tests/snapshots/insta_test__insta_tests-3.snap
---
source: tests/insta_test.rs
expression: tester.conv_program().as_ref().unwrap()
---
ConvProgram {
    components: [
        Func(
            ConvFuncDef {
                ty: Func(
                    Base(
                        Int,
                    ),
                    [],
                ),
                name: "main",
                args: [],
                body: ConvStmt {
                    kind: Block(
                        [
                            ConvStmt {
                                kind: Block(
                                    [],
                                ),
                            },
                            ConvStmt {
                                kind: Expr(
                                    ConvExpr {
                                        kind: Assign(
                                            ConvExpr {
                                                kind: Lvar(
                                                    Lvar {
                                                        offset: 4,
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                    },
                                                ),
                                                ty: Base(
                                                    Int,
                                                ),
                                                pos: Position {
                                                    n_char: 0,
                                                    n_line: 3,
                                                },
                                            },
                                            ConvExpr {
                                                kind: Num(
                                                    5,
                                                ),
                                                ty: Base(
                                                    Int,
                                                ),
                                                pos: Position {
                                                    n_char: 4,
                                                    n_line: 3,
                                                },
                                            },
                                        ),
                                        ty: Base(
                                            Int,
                                        ),
                                        pos: Position {
                                            n_char: 2,
                                            n_line: 3,
                                        },
                                    },
                                ),
                            },
                            ConvStmt {
                                kind: Block(
                                    [],
                                ),
                            },
                            ConvStmt {
                                kind: Expr(
                                    ConvExpr {
                                        kind: Assign(
                                            ConvExpr {
                                                kind: Lvar(
                                                    Lvar {
                                                        offset: 12,
                                                        ty: Ptr(
                                                            Base(
                                                                Int,
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                ty: Ptr(
                                                    Base(
                                                        Int,
                                                    ),
                                                ),
                                                pos: Position {
                                                    n_char: 8,
                                                    n_line: 4,
                                                },
                                            },
                                            ConvExpr {
                                                kind: Addr(
                                                    ConvExpr {
                                                        kind: Lvar(
                                                            Lvar {
                                                                offset: 4,
                                                                ty: Base(
                                                                    Int,
                                                                ),
                                                            },
                                                        ),
                                                        ty: Base(
                                                            Int,
                                                        ),
                                                        pos: Position {
                                                            n_char: 13,
                                                            n_line: 4,
                                                        },
                                                    },
                                                ),
                                                ty: Ptr(
                                                    Base(
                                                        Int,
                                                    ),
                                                ),
                                                pos: Position {
                                                    n_char: 12,
                                                    n_line: 4,
                                                },
                                            },
                                        ),
                                        ty: Ptr(
                                            Base(
                                                Int,
                                            ),
                                        ),
                                        pos: Position {
                                            n_char: 10,
                                            n_line: 4,
                                        },
                                    },
                                ),
                            },
                            ConvStmt {
                                kind: Block(
                                    [],
                                ),
                            },
                            ConvStmt {
                                kind: Expr(
                                    ConvExpr {
                                        kind: Assign(
                                            ConvExpr {
                                                kind: Lvar(
                                                    Lvar {
                                                        offset: 20,
                                                        ty: Ptr(
                                                            Base(
                                                                Int,
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                ty: Ptr(
                                                    Base(
                                                        Int,
                                                    ),
                                                ),
                                                pos: Position {
                                                    n_char: 9,
                                                    n_line: 5,
                                                },
                                            },
                                            ConvExpr {
                                                kind: Binary(
                                                    ConvBinary {
                                                        kind: Add,
                                                        lhs: ConvExpr {
                                                            kind: Lvar(
                                                                Lvar {
                                                                    offset: 12,
                                                                    ty: Ptr(
                                                                        Base(
                                                                            Int,
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            ty: Ptr(
                                                                Base(
                                                                    Int,
                                                                ),
                                                            ),
                                                            pos: Position {
                                                                n_char: 14,
                                                                n_line: 5,
                                                            },
                                                        },
                                                        rhs: ConvExpr {
                                                            kind: Binary(
                                                                ConvBinary {
                                                                    kind: Mul,
                                                                    lhs: ConvExpr {
                                                                        kind: Lvar(
                                                                            Lvar {
                                                                                offset: 4,
                                                                                ty: Base(
                                                                                    Int,
                                                                                ),
                                                                            },
                                                                        ),
                                                                        ty: Base(
                                                                            Int,
                                                                        ),
                                                                        pos: Position {
                                                                            n_char: 18,
                                                                            n_line: 5,
                                                                        },
                                                                    },
                                                                    rhs: ConvExpr {
                                                                        kind: Num(
                                                                            4,
                                                                        ),
                                                                        ty: Base(
                                                                            Int,
                                                                        ),
                                                                        pos: Position {
                                                                            n_char: 16,
                                                                            n_line: 5,
                                                                        },
                                                                    },
                                                                },
                                                            ),
                                                            ty: Base(
                                                                Int,
                                                            ),
                                                            pos: Position {
                                                                n_char: 16,
                                                                n_line: 5,
                                                            },
                                                        },
                                                    },
                                                ),
                                                ty: Ptr(
                                                    Base(
                                                        Int,
                                                    ),
                                                ),
                                                pos: Position {
                                                    n_char: 16,
                                                    n_line: 5,
                                                },
                                            },
                                        ),
                                        ty: Ptr(
                                            Base(
                                                Int,
                                            ),
                                        ),
                                        pos: Position {
                                            n_char: 12,
                                            n_line: 5,
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
                lvars: {
                    Lvar {
                        offset: 4,
                        ty: Base(
                            Int,
                        ),
                    },
                    Lvar {
                        offset: 12,
                        ty: Ptr(
                            Base(
                                Int,
                            ),
                        ),
                    },
                    Lvar {
                        offset: 20,
                        ty: Ptr(
                            Base(
                                Int,
                            ),
                        ),
                    },
                },
            },
        ),
    ],
}
